--- a/templates/home.html
+++ b/templates/home.html
@@ -19,20 +19,21 @@
   {% endblock %}
   {% block content %}
   <main>
-
   
     <div class="album py-5 bg-light">
       <div class="container">
-  
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-          <div class="col">
+
+        <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3"> -->
+          <div class="row">
+          <div class="col-md-6 col-lg-3">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" 
+              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" 
               aria-label="Placeholder: SITE TEAM" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"> SITE TEAM</text></svg>
-                <!-- <img class="bd-placeholder-img card-img-top" width="100%" height="225"  src="{% static 'img\Human_evolution.jpg' %}" alt=""> -->
+              <rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"> SITE TEAM</text></svg> -->
+                <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/site.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
-                <p class="card-text" style="height: 90px;">You can create new Fiche Produit and track if you product was ordered, purchased and declared at custom.</p>
+                <h5 class="card-title text-center">SITE TEAM</h5>
+                <p class="card-text" style="height: 60px;">You can create new Fiche Produit and track if you product was ordered, purchased and declared at custom.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                       <a  class="btn btn-sm btn-primary m-1 w-50 " style="height: 60px;" href="{% url 'site' %}">See list of Fiche Produit</a>
@@ -43,12 +44,13 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6 col-lg-3">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: SERVICE ACHAT" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">SERVICE ACHAT</text></svg>
-  
+              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: SERVICE ACHAT" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">SERVICE ACHAT</text></svg> -->
+              <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/achat.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
-                <p class="card-text" style="height: 90px;">You can see all orders and you can track you you purchased that order or not.</p>
+                <h5 class="card-title text-center">SERVICE ACHAT</h5>
+                <p class="card-text" style="height: 60px;">You can see all orders and you can track you you purchased that order or not.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary m-1 w-50" style="height: 60px;">See list of HG orders</button>
@@ -58,12 +60,13 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6 col-lg-3">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: LOGISTICS" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">LOGISTICS</text></svg>
-  
+              <!-- <svg class="bd-placehol<img class="bd-placeholder-img card-img-top" width="100%" height="225"  src="{% static 'img/site.jpg' %}" alt="">der-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: LOGISTICS" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">LOGISTICS</text></svg> -->
+              <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/logistics.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
-                <p class="card-text" style="height: 90px;">You can see all factures and track them if necessary documents like specification, TDS and declaration.</p>
+                <h5 class="card-title text-center">LOGISTICS</h5>
+                <p class="card-text" style="height: 60px;">You can see all factures and track them if necessary documents like specification, TDS and declaration.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary m-1 w-50" style="height: 60px;">See list of Factures</button>
@@ -74,13 +77,13 @@
               </div>
             </div>
           </div>
-  
-          <div class="col">
+          <div class="col-md-6 col-lg-3">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: QS" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">QS</text></svg>
-  
+              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: QS" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">QS</text></svg> -->
+              <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/qs.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
-                <p class="card-text" style="height: 90px;">You can find all documents related to Annexe-5. You can automatically create Inventory.</p>
+                <h5 class="card-title text-center">QS</h5>
+                <p class="card-text" style="height: 60px;">You can find all documents related to Annexe-5. You can automatically create Inventory.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary m-1 w-50" style="height: 60px;">See all Annexe-5 documentations</button>
@@ -92,6 +95,7 @@
             </div>
           </div>
         </div>
+        
       </div>
     </div>
   
