--- a/templates/site/site.html
+++ b/templates/site/site.html
@@ -2,17 +2,78 @@
 {% load static %}
 
 {% block head_extra %}
-<link rel="stylesheet" href="{% static 'css/list.css' %}">
+<style>
+#kerim table {
+  width: 90%;
+  overflow: auto;
+  background: rgb(255, 255, 255);
+  color: rgb(42, 110, 73);
+  border: none;
+  border-radius: 0.5em;
+  border: 0.1rem outset rgb(235, 233, 233);
+  margin: 5em 0;
+  margin-left: 5em;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+
+#kerim th {
+  height: 2em;
+  background-color: rgba(143, 188, 202, 0.87);
+  color: rgba(11, 6, 22, 0.658);
+  border-radius: 0.5em;
+
+}
+
+#kerim tr {
+  height: 3em;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.7em;
+  color: rgb(77, 96, 116);
+}
+
+#kerim tbody tr:nth-child(2n + 1) {
+  background-color: rgb(245, 248, 245);
+}
+
+
+#kerim td {
+  font-size: 15px;
+  margin-left: auto;
+}
+
+html {
+  background: rgb(238, 236, 236);
+}
+
+:root {
+  --rad: 0.7rem;
+  --dur: 0.3s;
+  --color-dark: #2f2f2f;
+  --color-light: #fff;
+  --color-brand: #ced3d8;
+  --font-fam: "Lato", sans-serif;
+  --height: 5rem;
+  --btn-width: 2rem;
+  --bez: cubic-bezier(0, 0, 0.43, 1.49);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+</style>
 {% endblock %}
 
 {% block content %}
 
-<div class="container">
+<div class="container-fluid" id="kerim">
 
 
   <table class="table">
     <thead>
-      <tr class="kerim">
+      <tr class="">
         <th scope="col">FP Number</th>
         <th scope="col">Product Name</th>
         <th scope="col">Annexe-5</th>
@@ -27,22 +88,19 @@
     <tbody>
       {% for fp in apidata %}
       <tr class="px-4 ">
-        <th scope="row" class="py-4 ">{{ fp.number }}</th>
-        <td class="py-4">{{ fp.product_name }}</td>
-        <td class="py-4">LOT - {{ fp.lot }}</td>
-        <td class="py-4">{{ fp.order_numbers }}</td>
-        <td class="py-4">{{ fp.facture_numbers }}</td>
-        <td class="py-4">{{ fp.specification_numbers }}</td>
-        <td class="py-4">{{ fp.tds_numbers }}</td>
-        <td class="py-4">{{ fp.declaration_numbers }}</td>
-        <td class="py-4">{{ fp.coo_numbers }}</td>
+        <td scope="row" class="">{{ fp.number }}</td>
+        <td class="">{{ fp.product_name }}</td>
+        <td class="">LOT - {{ fp.lot }}</td>
+        <td class="">{{ fp.order_numbers }}</td>
+        <td class="">{{ fp.facture_numbers }}</td>
+        <td class="">{{ fp.specification_numbers }}</td>
+        <td class="">{{ fp.tds_numbers }}</td>
+        <td class="">{{ fp.declaration_numbers }}</td>
+        <td class="">{{ fp.coo_numbers }}</td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
-
-
-
 </div>
 
 
