working on frontend

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% block head_extra %}
 <style>
+  .home-container{
+    min-height: 720px;
+    /* background-color: blue; */
+    padding-top: 100px;
+    padding-bottom: 10px;
+  }
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
@@ -18,10 +24,11 @@
   </style>
   {% endblock %}
   {% block content %}
+
   <main>
   
-    <div class="album py-5 bg-light">
-      <div class="container">
+    <div class="album py-3 bg-light">
+      <div class="container home-container">
 
         <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3"> -->
           <div class="row">
