--- a/templates/base.html
+++ b/templates/base.html
@@ -10,48 +10,68 @@
     {% block head_extra %}
     <title>Document</title>
     {% endblock %}
+    <style>
+        .base-container{
+            min-height: 720px;
+            margin-top: 10px;
+        }
+        .nav-link:hover{
+            -webkit-transform: scale(1.1);
+            background: #d4d3da;
+        }
+        .main-nav-buttons{
+            min-width: 200px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-
-        <nav class="navbar navbar-expand-lg navbar-primary bg-light border-bottom mb-2">
-            <div class="container-fluid">
-                <button class="navbar-toggler  border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">>></span>
-                </button>
-                <a class="navbar-brand w-25" href="/"><img  class="w-100" src="{% static 'img/bytk_logo.png' %}" alt="Bouygues Turkmen"></a>
-                <div class="collapse navbar-collapse h4 " id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 px-5 mb-lg-0 = w-100   d-flex justify-content-end">
-                        <li class="nav-item w-25 text-center m-1">
-                            <a class="nav-link active px-4 rounded border border-primary view overlay" aria-current="page" href="{% url 'site' %}">Site</a>
-                        </li>
-                        <li class="nav-item w-25 text-center m-1">
-                            <a class="nav-link px-4 rounded border border-primary" href="{% url 'achat' %}">Service Achat</a>
-                        </li>
-                        <li class="nav-item w-25 text-center m-1">
-                            <a class="nav-link px-4 rounded border border-primary" href="{% url 'logistics' %}">Logistics</a>
-                        </li>
-                        <li class="nav-item w-25 text-center m-1">
-                            <a class="nav-link px-4 rounded border border-primary" href="{% url 'qs' %}">QS</a>
-                        </li>
-                    </ul>
-
-                </div>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-primary bg-light border-bottom mb-2 shadow" >
+        <div class="container">
+            <button class="navbar-toggler  border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">>></span>
+            </button>
+            <a class="navbar-brand w-25 " href="/"><img   style="max-height: 90px;" src="{% static 'img/bytk_logo.jpg' %}" alt="Bouygues Turkmen"></a>
+            <div class="collapse navbar-collapse h4 " id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 px-5 mb-lg-0 w-100 d-flex justify-content-end">
+                    <li class="nav-item w-25 text-center m-1">
+                        <a class="nav-link active px-4  py-3 rounded border border-primary main-nav-buttons" aria-current="page" href="{% url 'site' %}">Site</a>
+                    </li>
+                    <li class="nav-item w-25 text-center m-1">
+                        <a class="nav-link px-4 py-3 rounded border border-primary main-nav-buttons" href="{% url 'achat' %}">Service Achat</a>
+                    </li>
+                    <li class="nav-item w-25 text-center m-1">
+                        <a class="nav-link px-4 py-3 rounded border border-primary main-nav-buttons" href="{% url 'logistics' %}">Logistics</a>
+                    </li>
+                    <li class="nav-item w-25 text-center m-1">
+                        <a class="nav-link px-4 py-3 rounded border border-primary main-nav-buttons" href="{% url 'qs' %}">QS</a>
+                    </li>
+                </ul>
+                
             </div>
-        </nav>
+        </div>
+    </nav>
+    
+    <!-- CONTENT -->
+    <div class="container-fluid base-container" >
+      
+        {% block content %}
+        {% endblock %}
     </div>
-    <div class="container border-top">
-        
-    </div>
-    {% block content %}
-  {% endblock %}
+
+    <!-- FOOTER -->
     {% block footer %}
+    <footer id="sticky-footer" class="flex-shrink-0 py-3 bg-dark text-white-50">
+        <div class="container text-center">
+          <small>Copyright &copy; Quantity Surveyor Team - NCC - Bouygues Turkmen</small>
+        </div>
+      </footer>
     {% endblock %}
 
-
-    {% block js %}
-    {% endblock %}
+    <!-- JS -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    {% block js %}
+    {% endblock %}
 </body>
 </html>
