--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-primary bg-light border-bottom mb-2 shadow" >
+    <nav class="navbar navbar-expand-lg navbar-primary bg-light border-bottom mb-2 shadow-lg" >
         <div class="container">
             <button class="navbar-toggler  border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">>></span>
