--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
                   <div class="btn-group">
                       <a  class="btn btn-sm btn-primary m-1 w-50 " style="height: 60px;" href="{% url 'site' %}">See list of Fiche Produit</a>
                     <!-- <button type="button" class="btn btn-sm btn-primary m-1 w-50 " style="height: 60px;">See list of Fiche Produit</button> -->
-                    <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'fpcreate' %}"">Add new Fiche Produit</a>
+                    <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'products' %}"">Add new Fiche Produit</a>
                     <!-- <button type="button" class="btn btn-sm btn-primary m-1" style="height: 60px;">Add new Fiche Produit</button> -->
                   </div>
                 </div>
